﻿w17 20.02.2016 15:03:22 +0300 - build 4556

1. Уточнение 4523. Учтём "D:\Path Name"\ в UnquoteExternal()

drkns 20.02.2016 04:16:03 +0200 - build 4555

1. Продолжение 4548: загружаем pdb только тогда, когда нужно.

drkns 19.02.2016 21:58:30 +0200 - build 4554

1. Уточнение 4552.

2. VC2015 warning.

w17 19.02.2016 22:31:34 +0300 - build 4553

1. Уточнение 4552, восстановление сборки VS2010.

drkns 19.02.2016 00:08:34 +0200 - build 4552

1. Еще раз на тему Alt+F8 во вьювере:
   - наличие %, h, 0x etc. в строке больше не меняет запомненный режим;
   - модификатор d, указанный в справке, не работал в принципе.
     Что прелестно - он и не мог работать, т. к., например, 1234d - валидное hex-число.
     Поэтому для явного указания "это decimal" теперь используется модификатор 'm'.
   - все модификаторы (кроме %) теперь работают и для задания левой позиции.
   - в диалог добавлены кнопки Ok/Cancel.

drkns 17.02.2016 19:43:48 +0200 - build 4551

1. После 4525 текст команды в user screen отображался не тем цветом.

drkns 14.02.2016 20:45:46 +0200 - build 4550

1. Вместо "Language data is incorrect or damaged" показываем "filename.lng: language data is incorrect or damaged" дабы не гадать, что там за файл.

2. Текст во всех исключениях, унаследованных от std::exception, трактуется как UTF-8.

drkns 14.02.2016 13:00:58 +0200 - build 4549

1. Восстановим сообщение об ошибке импорта XML.

2. Latest TinyXML-2.

3. SQLite 3.10.2.

drkns 13.02.2016 16:59:45 +0200 - build 4548

1. В сообщения об исключительных ситуациях добавлена кнопка "Stack".
   Для того, чтобы она работала адекватно, нужен Far.pdb.

2. Рефакторинг.

drkns 12.02.2016 23:30:30 +0200 - build 4547

1. Уточнена логика блокирования Ctrl+F10 в редакторе/просмотре: теперь блокируется только для модальных окон.

drkns 10.02.2016 23:21:06 +0200 - build 4546

1. Рефакторинг. Немного сократим код в менеджере.

drkns 09.02.2016 22:33:44 +0200 - build 4545

1. Рефакторинг.

drkns 08.02.2016 01:30:51 +0200 - build 4544
