@@ -34,35 +34,67 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "tracer.hpp"
 #include "imports.hpp"
 
-static std::vector<void*> GetBackTrace()
+static std::vector<const void*> GetBackTrace(const EXCEPTION_POINTERS* ExceptionInfo)
 {
-	// ## Windows Server 2003 and Windows XP:
-	// ## The sum of the FramesToSkip and FramesToCapture parameters must be less than 63.
-	const int MaxCallers = 62;
-	std::vector<void*> Result(MaxCallers);
-	auto FramesCount = Imports().RtlCaptureStackBackTrace(0, MaxCallers, Result.data(), nullptr);
-	Result.resize(FramesCount);
+	std::vector<const void*> Result;
+
+	// StackWalk64() may modify context record passed to it, so we will use a copy.
+	auto ContextRecord = *ExceptionInfo->ContextRecord;
+	STACKFRAME64 StackFrame = {};
+#if defined(_WIN64)
+	int machine_type = IMAGE_FILE_MACHINE_AMD64;
+	StackFrame.AddrPC.Offset = ContextRecord.Rip;
+	StackFrame.AddrFrame.Offset = ContextRecord.Rbp;
+	StackFrame.AddrStack.Offset = ContextRecord.Rsp;
+#else
+	int machine_type = IMAGE_FILE_MACHINE_I386;
+	StackFrame.AddrPC.Offset = ContextRecord.Eip;
+	StackFrame.AddrFrame.Offset = ContextRecord.Ebp;
+	StackFrame.AddrStack.Offset = ContextRecord.Esp;
+#endif
+	StackFrame.AddrPC.Mode = AddrModeFlat;
+	StackFrame.AddrFrame.Mode = AddrModeFlat;
+	StackFrame.AddrStack.Mode = AddrModeFlat;
+
+	block_ptr<SYMBOL_INFO> Symbol(sizeof(SYMBOL_INFO) + 256);
+	Symbol->MaxNameLen = 255;
+	Symbol->SizeOfStruct = sizeof(SYMBOL_INFO);
+
+	while (Imports().StackWalk64(machine_type, GetCurrentProcess(), GetCurrentThread(), &StackFrame, &ContextRecord, nullptr, nullptr, nullptr, nullptr))
+	{
+		Result.push_back((const void*)StackFrame.AddrPC.Offset);
+	}
+
 	return Result;
 }
 
-std::vector<string> tracer::GetSymbols(const std::vector<void*>& BackTrace)
+static std::vector<string> GetSymbols(const std::vector<const void*>& BackTrace)
 {
 	std::vector<string> Result;
 
 	const auto Process = GetCurrentProcess();
-	if (!Imports().SymInitialize(Process, nullptr, TRUE))
-		return Result;
-	SCOPE_EXIT{ Imports().SymCleanup(Process); };
-
-	const auto MaxNameLen = 2047;
+	const auto MaxNameLen = MAX_SYM_NAME;
 	block_ptr<SYMBOL_INFO> Symbol(sizeof(SYMBOL_INFO) + MaxNameLen + 1);
 	Symbol->SizeOfStruct = sizeof(SYMBOL_INFO);
 	Symbol->MaxNameLen = MaxNameLen;
+
+	Imports().SymSetOptions(SYMOPT_LOAD_LINES);
+	IMAGEHLP_LINE64 Line = { sizeof(Line) };
+	DWORD Displacement;
+
 	std::wostringstream Stream;
-	for (size_t i = 0, size = BackTrace.size(); i != size; ++i)
+	FOR(const auto i, BackTrace)
 	{
-		Imports().SymFromAddr(Process, reinterpret_cast<DWORD_PTR>(BackTrace[i]), nullptr, Symbol.get());
-		Stream << i << ": " << BackTrace[i] << " " << Symbol->Name << " - 0x" << Symbol->Address;
+		Stream << L"0x" << i;
+		const auto Address = reinterpret_cast<DWORD_PTR>(i);
+		if (Imports().SymFromAddr(Process, Address, nullptr, Symbol.get()))
+		{
+			Stream << " " << Symbol->Name;
+		}
+		if (Imports().SymGetLineFromAddr64(Process, Address, &Displacement, &Line))
+		{
+			Stream << L" (" << Line.FileName << L":" << Line.LineNumber << L")";
+		}
 		Result.emplace_back(Stream.str());
 		Stream.str(string());
 	}
@@ -71,11 +103,11 @@ std::vector<string> tracer::GetSymbols(const std::vector<void*>& BackTrace)
 
 LONG WINAPI StackLogger(EXCEPTION_POINTERS *xp)
 {
-	if (xp->ExceptionRecord->ExceptionCode == 0xE06D7363) // MS C++ exception
-		tracer::GetInstance()->store(*reinterpret_cast<const std::exception*>(xp->ExceptionRecord->ExceptionInformation[1]), GetBackTrace());
-	else
-		tracer::GetInstance()->store(xp->ExceptionRecord, GetBackTrace());
-
+	static const auto MSCPPExceptionCode = 0xE06D7363;
+	if (xp->ExceptionRecord->ExceptionCode == MSCPPExceptionCode)
+	{
+		tracer::GetInstance()->store(*reinterpret_cast<const std::exception*>(xp->ExceptionRecord->ExceptionInformation[1]), xp);
+	}
 	return EXCEPTION_CONTINUE_SEARCH;
 }
 
@@ -97,27 +129,71 @@ tracer::~tracer()
 	sTracer = nullptr;
 }
 
-
-void tracer::store(const EXCEPTION_RECORD* Record, std::vector<void*>&& BackTrace)
+void tracer::store(const std::exception& e, const EXCEPTION_POINTERS* ExceptionInfo)
 {
 	SCOPED_ACTION(CriticalSectionLock)(m_CS);
-	m_SehMap.insert(std::make_pair(Record, std::move(BackTrace)));
+	exception_context Context = { *ExceptionInfo->ExceptionRecord, *ExceptionInfo->ContextRecord };
+	m_StdMap.insert(std::make_pair(&e, Context));
 }
 
-void tracer::store(const std::exception& e, std::vector<void*>&& BackTrace)
+bool tracer::get_context(const std::exception& e, exception_context& Context) const
 {
 	SCOPED_ACTION(CriticalSectionLock)(m_CS);
-	m_StdMap.insert(std::make_pair(&e, std::move(BackTrace)));
+	auto Iter = m_StdMap.find(&e);
+	if (Iter == m_StdMap.end())
+	{
+		return false;
+	}
+	Context = Iter->second;
+	return true;
 }
 
-std::vector<void*> tracer::get(const EXCEPTION_RECORD* Record)
+std::vector<string> tracer::get(const std::exception& e)
 {
-	SCOPED_ACTION(CriticalSectionLock)(m_CS);
-	return m_SehMap[Record];
+	exception_context Context;
+	if (!tracer::GetInstance()->get_context(e, Context))
+	{
+		return std::vector<string>();
+	}
+	EXCEPTION_POINTERS xp = { &Context.ExceptionRecord, &Context.ContextRecord };
+
+	SymInitialise();
+	SCOPE_EXIT{ SymCleanup(); };
+
+	return GetSymbols(GetBackTrace(&xp));
 }
 
-std::vector<void*> tracer::get(const std::exception& e)
+std::vector<string> tracer::get(const EXCEPTION_POINTERS* e)
 {
-	SCOPED_ACTION(CriticalSectionLock)(m_CS);
-	return m_StdMap[&e];
+	SymInitialise();
+	SCOPE_EXIT{ SymCleanup(); };
+
+	return GetSymbols(GetBackTrace(e));
+}
+
+string tracer::get(const void* Address)
+{
+	SymInitialise();
+	SCOPE_EXIT{ SymCleanup(); };
+
+	return GetSymbols(make_vector<const void*>(Address)).front();
+}
+
+bool tracer::m_SymInitialised;
+
+bool tracer::SymInitialise()
+{
+	if (!m_SymInitialised)
+	{
+		m_SymInitialised = Imports().SymInitialize(GetCurrentProcess(), nullptr, TRUE) != FALSE;
+	}
+	return m_SymInitialised;
+}
+
+void tracer::SymCleanup()
+{
+	if (m_SymInitialised)
+	{
+		m_SymInitialised = !Imports().SymCleanup(GetCurrentProcess());
+	}
 }
