@@ -1,4 +1,10 @@
-﻿w17 20.02.2016 15:03:22 +0300 - build 4556
+﻿drkns 20.02.2016 15:56:08 +0200 - build 4557
+
+1. Продолжение 4548: показываем более правильный стек на x86, показываем source file/line в стеке и в основном диалоге.
+
+2. В UnquoteExternal() учтём прямой слеш тоже.
+
+w17 20.02.2016 15:03:22 +0300 - build 4556
 
 1. Уточнение 4523. Учтём "D:\Path Name"\ в UnquoteExternal()
 
